Implemented saving and loading game and seems to be working butmay require more testing